kubernetes/gateway-api/linkerd/04-east-west-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos-api-v2
  namespace: default
  labels:
    app: videos-api-v2
spec:
  selector:
    matchLabels:
      app: videos-api-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: videos-api-v2
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: videos-api-v2
---
apiVersion: v1
kind: Service
metadata:
  name: videos-api-v2
  namespace: default
spec:
  ports:
  - name: service
    port: 8080
  selector:
    app: videos-api-v2
